test/scc/decl/semantic-errors/076.a
076.t:1:28: error: '_Thread_local' specifier allowed on variable declarations only